--- a/iphone6__flat.html
+++ b/iphone6__flat.html
@@ -52,46 +52,46 @@
       <!-- Unnamed (iphone6+ flat) -->
 
       <!-- Unnamed (Image) -->
-      <div id="u43" class="ax_default image">
-        <img id="u43_img" class="img " src="images/iphone6__flat/u43.png"/>
-        <div id="u43_text" class="text " style="display:none; visibility: hidden">
+      <div id="u1" class="ax_default image">
+        <img id="u1_img" class="img " src="images/iphone6__flat/u1.png"/>
+        <div id="u1_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
-      <div id="u42" style="display:none; visibility:hidden;"></div>
+      <div id="u0" style="display:none; visibility:hidden;"></div>
 
       <!-- 演示区域 (Group) -->
-      <div id="u44" class="ax_default" data-label="演示区域" data-left="28" data-top="119" data-width="416" data-height="738">
+      <div id="u2" class="ax_default" data-label="演示区域" data-left="28" data-top="119" data-width="416" data-height="738">
 
         <!-- 背景+外框 (Rectangle) -->
-        <div id="u45" class="ax_default _默认样式" data-label="背景+外框">
-          <div id="u45_div" class=""></div>
-          <div id="u45_text" class="text " style="display:none; visibility: hidden">
+        <div id="u3" class="ax_default _默认样式" data-label="背景+外框">
+          <div id="u3_div" class=""></div>
+          <div id="u3_text" class="text " style="display:none; visibility: hidden">
             <p></p>
           </div>
         </div>
 
         <!-- 演示 (Dynamic Panel) -->
-        <div id="u46" class="ax_default" data-label="演示">
-          <div id="u46_state0" class="panel_state" data-label="1" style="">
-            <div id="u46_state0_content" class="panel_state_content">
+        <div id="u4" class="ax_default" data-label="演示">
+          <div id="u4_state0" class="panel_state" data-label="1" style="">
+            <div id="u4_state0_content" class="panel_state_content">
 
               <!-- Unnamed (SVG) -->
-              <div id="u47" class="ax_default image">
-                <img id="u47_img" class="img " src="images/iphone6_black/u5.svg"/>
-                <div id="u47_text" class="text " style="display:none; visibility: hidden">
+              <div id="u5" class="ax_default image">
+                <img id="u5_img" class="img " src="images/iphone6__flat/u5.svg"/>
+                <div id="u5_text" class="text " style="display:none; visibility: hidden">
                   <p></p>
                 </div>
               </div>
             </div>
           </div>
-          <div id="u46_state1" class="panel_state" data-label="2" style="visibility: hidden;">
-            <div id="u46_state1_content" class="panel_state_content">
+          <div id="u4_state1" class="panel_state" data-label="2" style="visibility: hidden;">
+            <div id="u4_state1_content" class="panel_state_content">
 
               <!-- Unnamed (SVG) -->
-              <div id="u48" class="ax_default image">
-                <img id="u48_img" class="img " src="images/iphone6_black/u6.svg"/>
-                <div id="u48_text" class="text " style="display:none; visibility: hidden">
+              <div id="u6" class="ax_default image">
+                <img id="u6_img" class="img " src="images/iphone6__flat/u6.svg"/>
+                <div id="u6_text" class="text " style="display:none; visibility: hidden">
                   <p></p>
                 </div>
               </div>
@@ -101,7 +101,7 @@
       </div>
 
       <!-- Unnamed (Hot Spot) -->
-      <div id="u49" class="ax_default">
+      <div id="u7" class="ax_default">
       </div>
     </div>
     <script src="resources/scripts/axure/ios.js"></script>
